@@ -1,5 +1,9 @@
 2011-07-27  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
+	* gdb.base/help.exp (help whatis): Update the expected string.
+
+2011-07-27  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
 	* gdb.dwarf2/dw2-simple-locdesc.S: New file.
 	* gdb.dwarf2/dw2-simple-locdesc.exp: New file.
 	* gdb.dwarf2/dw2-stack-boundary.exp (check partial symtab errors):
